fix layout issues using viewport

--- a/rcaas-ui/src/index.css
+++ b/rcaas-ui/src/index.css
@@ -7,6 +7,8 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
+html, body {
     font-family: "Open Sans", sans-serif;
+    width: 100%;
+    height: 100%;
 }
